--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@tma.js/sdk": "^1.5.3",
     "@tma.js/sdk-react": "^2.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
